// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`dispatchToSubscribers should dispatch to all broadcast subscribers (queue = null) 1`] = `
[
  "a",
  "b",
]
`;

exports[`dispatchToSubscribers should dispatch to broadcast and queue subscribers independently 1`] = `
[
  "broadcast",
  "queue-a",
]
`;

exports[`dispatchToSubscribers should not dispatch to subscribers on a different topic 1`] = `
[
  "a",
]
`;

exports[`dispatchToSubscribers should round-robin within queue groups across dispatches 1`] = `
[
  "a",
  "b",
  "a",
]
`;
